Added users, generated new services, solved empty id and made models required correct
