# setok-client-angular/src/app/api/models/item-dto.ts
@@ -1,12 +1,11 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface ItemDto {
-  category?: null | string;
+  category: string;
   description?: null | string;
   id?: number;
   image?: null | string;
-  name?: null | string;
-  price?: number;
-  properties?: null | Array<string>;
-  quantity?: number;
+  name: string;
+  price: number;
+  quantity: number;
 }
