# setok-client-angular/src/app/api/models/user-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserDto {
+  email: string;
+  id?: number;
+  password: string;
+}
