# setok-dotnet/setok.webapi/Models/UserDto.cs
@@ -1,0 +1,10 @@
+using System.ComponentModel.DataAnnotations;
+
+public class UserDto
+{
+    public int Id { get; set; }
+    [Required]
+    public string Email { get; set; } = string.Empty;
+    [Required]
+    public string Password { get; set; } = string.Empty;
+}
