# setok-dotnet/setok.webapi/swagger.yml
@@ -178,17 +178,72 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/ItemDto'
+  /User:
+    post:
+      tags:
+        - User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/UserDto'
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ItemDto'
+    get:
+      tags:
+        - User
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDto'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDto'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDto'
 components:
   schemas:
     ItemDto:
+      required:
+        - category
+        - name
+        - price
+        - quantity
       type: object
       properties:
         id:
           type: integer
           format: int32
         name:
+          minLength: 1
           type: string
-          nullable: true
         description:
           type: string
           nullable: true
@@ -202,8 +257,8 @@ components:
           type: string
           nullable: true
         category:
+          minLength: 1
           type: string
-          nullable: true
       additionalProperties: false
     Message:
       type: object
@@ -224,4 +279,20 @@ components:
         date:
           type: string
           nullable: true
+      additionalProperties: false
+    UserDto:
+      required:
+        - email
+        - password
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        email:
+          minLength: 1
+          type: string
+        password:
+          minLength: 1
+          type: string
       additionalProperties: false
